X3 C++ PluginFramework

2011-02-21

    * Replace "\n" to "\\n " in LogWriter plugin. Add replace function in ctrim.h

------v1.0.7------

2011-02-18

    * Add delay-load comments.
    * Fix Cx_PluginLoader::LoadPluginOrDelay.
    * Not call CoUninitialize if another plugin (eg. StringTable) is using ConfigXml plugin.

2011-02-16

    * Fix PluginManager:
        Avoid plugin loading when a plugin is unloading.
        Counting even a plugin is not loaded in InitializePlugins.
        Not call ReleaseModule if a plugin is not loaded in UnloadPlugins.
        Force load ConfigXml plugin if the class file is about to loaded.

------v1.0.6------

2011-02-14

    * Compile and fix projects using MinGW and GCC 4.5.1.
    * Add Code::Blocks 10.05 projects (converted from x3_vc60).
    * Support MFC dialog application and console application in cppunit test applications.
    * Rename MSXML DOM namespace in ConfigXml plugin.

    * PluginManager 1.0.0.5:
    * PluginManager\Cx_PluginLoader.cpp: Ignore folders in GetPluginIndex. Rewrite LoadPlugin().

    * Add L before the wide character like L'.'

------v1.0.5------

2011-02-08

    * PluginManager: Implement Ix_PluginDelayLoad to support delay-load feature for observer plugins.
    * ChangeObserver: Support delay-load feature for observer plugins.

2011-02-07

    * PluginManager: Implement the delay-loaded feature. Add Ix_AppWorkPath.
    * LogWriter: Using Ix_AppWorkPath to get logging path.

2011-02-04

    * PluginManager: Support absolute path in LoadPlugins().
        Unload plugin if fail to call InitializePlugins().
        Add filename in MODULEINFO. Add module index in class map.
        Don't remove element in ReleaseModule().

------v1.0.4------

2011-01-18

    * ConfigXml: Delay call CoUninitialize until plugin is unloading.

2011-01-15

    * Remove cppunit 1.12.1 include files.
    * Replace StrCpyNW to lstrcpynW (because for VC6 shell32.dll no StrCpyNW entry point in Win7).